--- a/index.html
+++ b/index.html
@@ -17,36 +17,32 @@
 
     <h2>Sign up for our upcoming Launch!</h2>
 
-    <form action="thankyou.html" method="get">
+    <form action="capprojThankyoupage.html" method="get">
 
-        <label for="firstname">First Name:</label>
+        <label for="firstname">First Name:</label><br>
 
-        <p id="input"></p>
 
-        <input type="text" name="username" id="firstname" required>
+        <input type="text" name="username" id="firstname" required><br>
 
-        <p></p>
 
-        <label for="lastname">Last Name:</label>
+        <label for="lastname">Last Name:</label><br>
 
-        <p id="input"></p>
 
-        <input type="text" name="lastname" id="lastname" required>
+        <input type="text" name="lastname" id="lastname" required><br>
 
-        <p></p>
 
-        <label for="email">Email:</label>
+        <label for="email">Email:</label><br>
 
-        <p id="input"></p>
 
-        <input type="email" name="email" id="email" required>
+        <input type="email" name="email" id="email" required><br>
 
-        <p></p>
 
         <input type="submit" name="" id="submit" value="Sign me up!">
 
         <p></p>
-        
+
+        <!-- must use break <br> instade of empty paragraph -->
+
     </form>
 
 </body>
